example-2/terraform/applications/sg.tf
resource "aws_security_group" "example" {
  name        = "yo_kash_projetc_fresh_Test_1"
  description = "yo_kash_projetc_fresh_Test_1"
  ingress {
    description = "allow 22 port"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    description = "allow 80 port"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "outbound all"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
